Refactor FileServer.java
Applied refactoring to FileServer.java based on suggestions in b/441886967:
- Refactored respondWithFile to use a Map for content types.
- Used computeIfAbsent in addHistory.
- Used try-with-resources for OutputStream.
- Replaced System.out.printf with TestLogger.log.

Bug: 441886967
Test: Ran 30 baseline tests, all passed.
Change-Id: I367d9ecc8c15747f3fec37c351fe29ad16723b19

GitOrigin-RevId: 7d953a908696aa750e4e0f8d503bff43cc99353c